[project]
name = "daskmsASTROKIT"
version = "0.0.1"
authors = [
	{name = "Hans-Rainer Kloeckner", email = "hrkloeck@gmail.com"},
]
description = "Astro convenience functions for daskms "
readme      = "README.md"
requires-python = '>=3.12,<3.14'
license = { file = "LICENCE"}
keywords = ["Radioastronomy", "Interferometry"]
dependencies = [
	     "dask-ms >=0.2.29","astropy >= 7.2","matplotlib >= 3.9.1"
]

[tool.setuptools.package.find]
include = ["daskms_ASTROKIT*"]


[project.scripts]
examol = "daskms_ASTROKIT.GET_MS_INFO:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"