[project]
name = "daskmsASTROKIT"
version = "0.0.1"
authors = [
	{name = "Hans-Rainer Kloeckner", email = "hrkloeck@gmail.com"},
]
description = "Astro convenience functions for daskms "
readme      = "README.md"
requires-python = ">=3.12,<3.14.3"
license = { file = "LICENSE"}
keywords = ["Radioastronomy", "Interferometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]
dependencies = [
	     "dask-ms >=0.2.18","astropy >= 7.2","matplotlib >= 3.9.1"
]

[tool.setuptools.package.find]
include = ["daskms_ASTROKIT*"]


[project.scripts]
get_ms_info = "daskms_ASTROKIT.GET_MS_INFO:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daskms_ASTROKIT/libs"]